
## Documentation
- `stonesense-art-guide`: guide for making sprite art for Stonesense

## API
- ``Military::removeFromSquad``: removes unit from any squad assignments
- ``Buildings::checkFreeTiles``: now replaces the extents parameter for a building pointer
- ``Units::isUnitInBox``, ``Units::getUnitsInBox``: don't include inactive units

## Lua
- ``dfhack.units.setAutomaticProfessions``: sets unit labors according to current work detail settings
- ``dfhack.military.removeFromSquad``: Lua API for ``Military::removeFromSquad``
- ``gui.dwarfmode``: adventure mode cursor now supported in ``getCursorPos``, ``setCursorPos``, and ``clearCursorPos`` funcitons
- ``dfhack.buildings.checkFreeTiles``: now replaces the extents parameter for a building pointer
- ``overlay.isOverlayEnabled``: new API for querying whether a given overlay is enabled

## Removed

# 51.06-r1

## Misc Improvements
- Compatibility with DF 51.06

# 51.05-r1

## Misc Improvements
- Compatibility with DF 51.05

# 51.04-r1.1

## Fixes
- `gui/launcher`: ensure commandline is fully visible when searching through history and switching from a very long command to a short command
- `gui/launcher`: flatten text when pasting multi-line text from the clipboard
- Ctrl-a hotkeys have been changed to something else (Ctrl-n) for tools that also have an editable text field, where Ctrl-a is interpreted as select all text

## API
- ``Core::getUnpausedMs``: new API for getting unpaused ms since load in a fort-mode game

# 51.04-r1

## Misc Improvements
- Compatibility with Steam release of DF 51.04

# 51.03-r1.1

## Misc Improvements
- Compatibility with Itch release of DF 51.03

# 51.03-r1

## Fixes
- `gui/gm-editor`: fix Enter key not being recognized for opening the selected object

# 51.02-r1

## Misc Improvements
- DFHack edit field widgets, such as the commandline editor in `gui/launcher`, now support text selection and other advanced text editing features from `gui/journal`

# 50.15-r2

## New Features